# cvc

./: .env  Dockerfile  Makefile  README.md  pyproject.toml
mini_data_warehouse/: .gitignore  README.md  dbt_project.yml
mini_data_warehouse/models/bronze/: _sources.yml  src.yml  stg_fund_data.sql
mini_data_warehouse/models/bronze/company_data/: stg_company_data.sql  stg_company_data.yml
mini_data_warehouse/models/bronze/stg_company_data/: stg_company_data.sql
mini_data_warehouse/models/bronze/stg_dup_company_names_for_same_id/: stg_dup_company_names_for_same_id.sql  stg_dup_company_names_for_same_id.yml
mini_data_warehouse/models/bronze/stg_fund_data/: stg_fund_data.sql  stg_fund_data.yml
mini_data_warehouse/models/gold/: fund_nav_over_time.sql
mini_data_warehouse/models/gold/dim_company/: dim_company.sql  dim_company.yml
mini_data_warehouse/models/gold/dim_date/: dim_date.sql  dim_date.yml
mini_data_warehouse/models/gold/dim_funds/: dim_funds.sql  dim_funds.yml
mini_data_warehouse/models/gold/fact_company_nav_all/: fact_company_nav_all.sql  fact_company_nav_all.yml
mini_data_warehouse/models/gold/fact_company_nav_over_time_m_one/: company_nav_over_time_m_one.sql  company_nav_over_time_one.yml  fact_company_nav_over_time_m_one.sql  fact_company_nav_over_time_one.yml
mini_data_warehouse/models/gold/fact_company_nav_over_time_m_two/: fact_company_nav_over_time_m_two.sql  (+1 more)
mini_data_warehouse/models/silver/: fund_events_v.sql
mini_data_warehouse/seeds/: company_data.yml  exercise_1_data.csv  fund_data.csv  fund_data.yml  seed__company_data.csv
(+11 files in other folders)
